<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculator_relativelayout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    tools:context=".CalculatorActivity" >

    <FrameLayout
        android:id="@+id/calculator_framelayout_camerapreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#c0c0c0ff" >
    </FrameLayout>

    <LinearLayout
        android:id="@+id/calculator_linearlayout_controls"
        android:layout_width="wrap_content"
        android:layout_height="350dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/background_light"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/calculator_linarlayout_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@+id/calculator_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="54dp"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <TextView
                android:id="@+id/calculator_textview_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="right"
                android:onClick="onClick"
                android:padding="10dp"
                android:text="@string/main_calc_0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <EditText
                android:id="@+id/calculator_edittext_display"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:gravity="center_vertical|right"
                android:inputType="numberDecimal"
                android:visibility="visible" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/calculator_tablelayout_controls"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal" >

            <TableRow
                android:id="@+id/calculator_tablerow_one"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center|center_horizontal" >

                <Button
                    android:id="@+id/calculator_button_e"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_e"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/calculator_button_h"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_h"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/calculator_button_c"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_c"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/calculator_button_ce"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_ce"
                    android:textSize="24sp" />

            </TableRow>

            <TableRow
                android:id="@+id/calculator_tablerow_two"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center|center_horizontal" >

                <Button
                    android:id="@+id/calculator_button_seven"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_seven"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/calculator_button_eight"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_eight"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/calculator_button_nine"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_nine"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/calculator_button_plus"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_sum"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:id="@+id/calculator_tablerow_three"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center|center_horizontal" >

                <Button
                    android:id="@+id/calculator_button_four"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_four"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/calculator_button_five"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_five"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/calculator_button_six"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_six"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/calculator_button_minus"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_min"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:id="@+id/calculator_tablerow_four"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center|center_horizontal" >

                <Button
                    android:id="@+id/calculator_button_one"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_one"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/calculator_button_two"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_two"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/calculator_button_three"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_three"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/calculator_button_quotient"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_div"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:id="@+id/calculator_tablerow_five"
                style="?android:attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center|center_horizontal" >

                <Button
                    android:id="@+id/calculator_button_dot"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_dot"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/calculator_button_zero"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_zero"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/calculator_button_equalsto"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_equ"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/calculator_button_product"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:text="@string/calculator_label_mul"
                    android:textSize="24sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</RelativeLayout>